tests/cli/snapshots/cli_spec__test__generator_spec__tests__cli__fixtures__generator__proto-connect-rpc.md.snap
---
source: tests/cli/gen.rs
assertion_line: 333
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

input GEN__news__MultipleNewsId {
  ids: [Id!]!
}

input GEN__news__NewsInput {
  body: String!
  id: Int!
  postImage: String!
  status: Status
  title: String!
}

input Id {
  id: Int!
}

enum Status {
  DELETED
  DRAFT
  PUBLISHED
}

type Address {
  city: String
  geo: Geo
  street: String
  suite: String
  zipcode: String
}

type Company {
  bs: String
  catchPhrase: String
  name: String
}

type GEN__news__NewsList {
  news: [News!]!
}

type Geo {
  lat: String
  lng: String
}

type News {
  body: String!
  id: Int!
  postImage: String!
  status: Status
  title: String!
}

type Query {
  GEN__news__NewsService__AddNews(news: GEN__news__NewsInput!): News @http(url: "http://localhost:50051/news.NewsService/AddNews", body: "{{.args.news}}", headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  GEN__news__NewsService__DeleteNews(newsId: Id!): Empty @http(url: "http://localhost:50051/news.NewsService/DeleteNews", body: "{{.args.newsId}}", headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  GEN__news__NewsService__EditNews(news: GEN__news__NewsInput!): News @http(url: "http://localhost:50051/news.NewsService/EditNews", body: "{{.args.news}}", headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  GEN__news__NewsService__GetAllNews: GEN__news__NewsList @http(url: "http://localhost:50051/news.NewsService/GetAllNews", body: {}, headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  GEN__news__NewsService__GetMultipleNews(multipleNewsId: GEN__news__MultipleNewsId!): GEN__news__NewsList @http(url: "http://localhost:50051/news.NewsService/GetMultipleNews", body: "{{.args.multipleNewsId}}", headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  GEN__news__NewsService__GetNews(newsId: Id!): News @http(url: "http://localhost:50051/news.NewsService/GetNews", body: "{{.args.newsId}}", headers: [{key: "Connect-Protocol-Version", value: "1"}], method: "POST")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  address: Address
  company: Company
  email: String
  id: Int
  name: String
  phone: String
  username: String
  website: String
}
